substrate/frame/support/test/tests/runtime_ui/missing_runtime_types_derive.stderr
error: Missing Runtime Types. Please annotate the runtime struct with `#[runtime::derive]`
  --> tests/runtime_ui/missing_runtime_types_derive.rs:19:1
   |
19 | mod runtime {
   | ^^^
